--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@tailwindcss/vite": "^4.1.10",
         "axios": "^1.10.0",
         "react": "^19.1.0",
+        "react-calendar": "^6.0.0",
         "react-dom": "^19.1.0",
         "react-hook-form": "^7.59.0",
         "react-icons": "^5.5.0",
