--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "run server": "json-server --watch db.json --port 3001"
+        "server": "json-server --watch db.json --port 3001"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.8.2",
